--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tsd-code-sync",
   "displayName": "TSD-code-sync",
   "description": "Push code to TSD",
-  "version": "0.0.1",
+  "publisher": "FlorianKrull",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.77.0"
   },
