--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "async": "^3.2.4",
     "async-es": "^3.2.4",
     "async-mutex": "^0.4.0",
+    "ignore": "^5.2.4",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.9"
